--- a/azul-counter/index.html
+++ b/azul-counter/index.html
@@ -13,27 +13,60 @@
         font-family: 'Inter', sans-serif;
         background-color: #0f172a; /* Slate-900 Dark Background */
       }
-      /* 커스텀 슬라이더 스타일링 (Tailwind로는 어려운 세부 스타일) */
+
+      /* --- 터치 최적화 및 버튼 스타일 --- */
+
+      input[type='range'] {
+        height: 12px;
+        cursor: pointer;
+      }
+
+      /* Webkit (Chrome, Safari) 용 슬라이더 손잡이 스타일 */
       input[type='range']::-webkit-slider-thumb {
         -webkit-appearance: none;
-        height: 40px;
-        width: 40px;
+        height: 30px;
+        width: 30px;
         border-radius: 50%;
         background: #3b82f6; /* Blue-500 */
         cursor: pointer;
-        box-shadow: 0 0 5px rgba(59, 130, 246, 0.5);
-        margin-top: -8px; /* 트랙 중앙에 오도록 조정 */
+        box-shadow: 0 0 8px rgba(59, 130, 246, 0.6);
+        margin-top: -9px;
+        border: 3px solid #ffffff;
+      }
+
+      /* Mozilla (Firefox) 용 슬라이더 손잡이 스타일 */
+      input[type='range']::-moz-range-thumb {
+        height: 30px;
+        width: 30px;
+        border-radius: 50%;
+        background: #3b82f6;
+        cursor: pointer;
+        box-shadow: 0 0 8px rgba(59, 130, 246, 0.6);
+        border: 3px solid #ffffff;
+      }
+
+      /* 모든 버튼에 대한 기본 스타일 */
+      .control-button {
+        width: 32px;
+        height: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5rem; /* 버튼 아이콘 크기 */
+        font-weight: 500;
+        line-height: 1; /* 텍스트 중앙 정렬 */
+        user-select: none; /* 드래그 방지 */
       }
     </style>
   </head>
   <body class="min-h-screen flex items-center justify-center p-4">
-    <div id="app" class="w-full max-w-2xl bg-white shadow-2xl rounded-xl p-6">
+    <div id="app" class="w-full max-w-2xl bg-white shadow-2xl rounded-xl p-6 md:p-10">
       <!-- 헤더 -->
       <h1 class="text-3xl font-bold text-gray-800 mb-8">Azul tiles counter</h1>
 
       <!-- 슬라이더 컨테이너 -->
       <div id="sliders-container" class="space-y-6">
-        <!-- 슬라이더는 JavaScript를 통해 동적으로 생성됩니다 -->
+        <!-- 슬라이더와 버튼은 JavaScript를 통해 동적으로 생성됩니다 -->
       </div>
 
       <!-- 리셋 버튼 -->
@@ -49,70 +82,80 @@
       // 전역 상수
       const SLIDER_COUNT = 5;
       const DEFAULT_VALUE = 20;
+      const MIN_VALUE = 0;
+      const MAX_VALUE = 20;
       const STORAGE_KEY = 'sliderValues';
       const slidersContainer = document.getElementById('sliders-container');
       const resetButton = document.getElementById('resetButton');
 
       /**
        * 슬라이더 요소를 생성하고 DOM에 추가합니다.
-       * @param {number} index - 슬라이더의 순서 (0부터 시작)
-       * @param {number} value - 슬라이더의 초기값
        */
       function createSliderElement(index, value) {
         const wrapper = document.createElement('div');
         wrapper.className = 'slider-item';
 
-        // 슬라이더 이름
         const labelText = ['blue', 'yellow', 'red', 'black', 'cyan'];
 
         wrapper.innerHTML = `
                 <div class="flex justify-between items-center mb-2">
-                    <label for="slider-${index}" class="text-gray-700 font-medium text-sm">
+                    <label for="slider-${index}" class="text-gray-700 font-medium text-sm md:text-base">
                       <img src="./images/${labelText[index]}.svg" alt="${labelText[index]}" width="40" height="40" />
                     </label>
-                    <span id="value-${index}" class="text-xl font-bold text-blue-600">${value}</span>
+                    
+                    <div class="flex items-center space-x-3">
+                        <!-- Plus Button -->
+                        <button type="button" data-index="${index}" data-action="increment"
+                                class="control-button bg-blue-500 text-white rounded-lg hover:bg-blue-600 transition duration-100 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 active:scale-95">
+                            &plus;
+                        </button>
+                        
+                        <!-- Value Display (Wider space for 1-2 digits) -->
+                        <span id="value-${index}" class="text-xl font-bold text-blue-600 w-8 text-center">${value}</span>
+
+                        <!-- Minus Button -->
+                        <button type="button" data-index="${index}" data-action="decrement"
+                                class="control-button bg-gray-200 text-gray-700 rounded-lg hover:bg-gray-300 transition duration-100 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 active:scale-95">
+                            &minus;
+                        </button>
+                    </div>
                 </div>
+                <!-- Range Input -->
                 <input type="range" id="slider-${index}" 
-                       min="0" max="20" value="${value}" 
+                       min="${MIN_VALUE}" max="${MAX_VALUE}" value="${value}" 
                        data-index="${index}" 
-                       class="w-full h-4 bg-gray-200 rounded-lg appearance-none cursor-pointer range-lg">
+                       class="w-full bg-gray-200 rounded-lg appearance-none focus:outline-none">
             `;
         slidersContainer.appendChild(wrapper);
 
-        // 이벤트 리스너를 직접 추가하여 성능 최적화
+        // 슬라이더 (input) 이벤트 리스너: 슬라이드 시 값 업데이트
         const rangeInput = wrapper.querySelector(`#slider-${index}`);
-        const valueDisplay = wrapper.querySelector(`#value-${index}`);
-
         rangeInput.addEventListener('input', (event) => {
-          // 실시간으로 표시되는 값을 업데이트
-          valueDisplay.textContent = event.target.value;
-          // 세션 스토리지에 값을 저장
-          saveSliderValues();
+          const newValue = parseInt(event.target.value, 10);
+          // 슬라이더 이동 시 값 디스플레이 및 세션 저장 업데이트
+          updateSliderDisplayAndStorage(index, newValue);
         });
       }
 
       /**
        * 세션 스토리지에서 저장된 값을 불러옵니다.
-       * 저장된 값이 없거나 형식이 잘못된 경우, 초기값 배열을 반환합니다.
-       * @returns {number[]} 5개의 슬라이더 값 배열
        */
       function loadSliderValues() {
         try {
           const storedData = sessionStorage.getItem(STORAGE_KEY);
           if (storedData) {
             const values = JSON.parse(storedData);
-            // 배열인지, 길이가 5인지, 모든 요소가 숫자인지 확인
+            // 유효성 검사
             if (
               Array.isArray(values) &&
               values.length === SLIDER_COUNT &&
-              values.every((v) => typeof v === 'number' && v >= 0 && v <= 20)
+              values.every((v) => typeof v === 'number' && v >= MIN_VALUE && v <= MAX_VALUE)
             ) {
               return values;
             }
           }
         } catch (error) {
           console.error('Error loading or parsing sessionStorage:', error);
-          // 오류 발생 시 기본값 반환
         }
         // 초기값 배열 반환 (모두 20)
         return Array(SLIDER_COUNT).fill(DEFAULT_VALUE);
@@ -126,7 +169,6 @@
         for (let i = 0; i < SLIDER_COUNT; i++) {
           const inputElement = document.getElementById(`slider-${i}`);
           if (inputElement) {
-            // input의 value는 항상 문자열이므로 숫자로 변환
             currentValues.push(parseInt(inputElement.value, 10));
           }
         }
@@ -134,30 +176,62 @@
       }
 
       /**
-       * 모든 슬라이더와 디스플레이 값을 업데이트합니다.
-       * @param {number[]} values - 슬라이더에 적용할 5개의 값 배열
+       * 단일 슬라이더의 값, 디스플레이를 업데이트하고 세션 스토리지에 저장합니다.
+       * @param {number} index - 슬라이더 인덱스 (0-4)
+       * @param {number} newValue - 설정할 새 값
        */
-      function updateAllSliders(values) {
-        values.forEach((value, index) => {
-          const inputElement = document.getElementById(`slider-${index}`);
-          const valueDisplay = document.getElementById(`value-${index}`);
+      function updateSliderDisplayAndStorage(index, newValue) {
+        const inputElement = document.getElementById(`slider-${index}`);
+        const valueDisplay = document.getElementById(`value-${index}`);
 
-          if (inputElement && valueDisplay) {
-            inputElement.value = value;
-            valueDisplay.textContent = value;
-          }
-        });
-        // DOM 업데이트 후, 세션 스토리지에도 저장
-        saveSliderValues();
+        if (inputElement && valueDisplay) {
+          // DOM 값 업데이트
+          inputElement.value = newValue;
+          valueDisplay.textContent = newValue;
+
+          // 세션 저장
+          saveSliderValues();
+        }
+      }
+
+      /**
+       * +/- 버튼 클릭을 처리하는 이벤트 핸들러입니다.
+       */
+      function handleButtonClick(event) {
+        // data-action 속성을 가진 가장 가까운 요소를 찾습니다.
+        const button = event.target.closest('[data-action]');
+        if (!button) return;
+
+        const index = parseInt(button.dataset.index, 10);
+        const action = button.dataset.action;
+        const inputElement = document.getElementById(`slider-${index}`);
+
+        if (!inputElement) return;
+
+        let currentValue = parseInt(inputElement.value, 10);
+        let newValue = currentValue;
+
+        // 값 증가/감소 로직
+        if (action === 'increment' && currentValue < MAX_VALUE) {
+          newValue = currentValue + 1;
+        } else if (action === 'decrement' && currentValue > MIN_VALUE) {
+          newValue = currentValue - 1;
+        }
+
+        if (newValue !== currentValue) {
+          // 슬라이더 값, 디스플레이, 세션 스토리지 업데이트
+          updateSliderDisplayAndStorage(index, newValue);
+        }
       }
 
       /**
        * 모든 슬라이더를 초기값(20)으로 설정하고 세션 스토리지에 저장합니다.
        */
       function resetSliders() {
-        // 모든 값을 초기값 20으로 설정한 배열 생성
         const initialValues = Array(SLIDER_COUNT).fill(DEFAULT_VALUE);
-        updateAllSliders(initialValues);
+        initialValues.forEach((value, index) => {
+          updateSliderDisplayAndStorage(index, value);
+        });
       }
 
       /**
@@ -167,20 +241,20 @@
         // 1. DOM에 슬라이더 요소 생성
         const savedValues = loadSliderValues();
 
-        // 컨테이너 초기화
         slidersContainer.innerHTML = '';
 
-        // 슬라이더 요소 생성 및 초기값 설정
         for (let i = 0; i < SLIDER_COUNT; i++) {
-          // 저장된 값이 있다면 해당 값을 사용하고, 없다면 loadSliderValues에서 반환된 기본값(20) 사용
-          const initialValue = savedValues[i] !== undefined ? savedValues[i] : DEFAULT_VALUE;
+          const initialValue = savedValues[i];
           createSliderElement(i, initialValue);
         }
 
         // 2. 리셋 버튼 이벤트 리스너 설정
         resetButton.addEventListener('click', resetSliders);
 
-        // 3. 초기 로드 시 값 저장 (최초 접속 시 기본값 20으로 세션 스토리지 초기화)
+        // 3. 버튼 이벤트 위임: 컨테이너에 단 하나의 클릭 리스너를 추가합니다.
+        slidersContainer.addEventListener('click', handleButtonClick);
+
+        // 4. 초기 로드 시 값 저장 (불러온 값이 세션에 없었다면 기본값 20으로 초기화)
         saveSliderValues();
       }
 
