feat: 두번 연속 클릭시 확대 방지

--- a/azul-counter/index.html
+++ b/azul-counter/index.html
@@ -12,6 +12,7 @@
       body {
         font-family: 'Inter', sans-serif;
         background-color: #0f172a; /* Slate-900 Dark Background */
+        touch-action: manipulation;
       }
 
       /* --- 터치 최적화 및 버튼 스타일 --- */
